Fixed content to align the content properly. Work to do on the right items and ensuring they are shown only on correct window width.

--- a/styles/index.css
+++ b/styles/index.css
@@ -1,21 +1,19 @@
 
 body {
     display: flex;
+    margin: 0;
 }
 
 #sidebar {
+    min-width: 220px;
+    max-width: 300px;
     width: 15%;
     height: 100vh;
-    margin-left: 0;
     margin-right: 10px;
 
     border-right: 1px solid rgb(255, 255, 255);
 
     position: relative; /* required to configure the settings div to be in the bottom left.*/
-}
-
-#right {
-    width: 80%;
 }
 
 #sidebar-settings-button {
@@ -25,13 +23,34 @@ body {
 
     /* set the style of the div */
     width: 100%;
-    height: 7vh;
+    height: 7%;
     border-top: 1px solid rgb(255, 255, 255);
 
     /* set the spans to be in the middle */
     display: grid;
     align-items: center;
 }
+
 #sidebar-settings-button span {
     vertical-align: middle;
+}
+
+#right {
+    /*Align items in row orientation*/
+    display: flex;
+    flex-direction: row;
+
+    /*Set the height and the width of the div.*/
+    height: 100vh;
+    width: 100%;
+}
+
+#content {
+    width: 100%;
+}
+
+#info-panel {
+    margin-right: 0;
+    width: 50%;
+    border: 1px solid rgb(255, 255, 255);
 }
